# SpanBERT-CRF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  spanbert-crf.ipynb  train.py
api/: main.py
src/: __init__.py  data.py  inference.py  metrics.py  models.py  train.py
tests/: test_models.py
